Fix thread line gap above pinned tweet threads

--- a/src/sass/tweet/card.scss
+++ b/src/sass/tweet/card.scss
@@ -24,6 +24,7 @@
     }
 
     .attachments {
+        margin: 0;
         border-radius: 0;
     }
 }
